# memwbot

./: Cargo.toml  Config.toml  Justfile  README.md
.github/workflows/: build-and-push.yml
docker/: dev.docker-compose.yml  dev.dockerfile  prod.dockerfile
src/: main.rs
src/application/: configuration.rs  context.rs  environment.rs  mod.rs
src/events/: ai_channel.rs  ai_channel_context.txt  guild_member_add.rs  member_salute.rs  message_create.rs  mod.rs  shard_presence.rs  shard_status.rs
terraform/: .gitignore  main.tf  resources.tf  variables.tf
