[package]
name = "memwbot"
version = "0.1.0"
edition = "2024"

[dependencies]
config = "0.15.18"
dotenvy = "0.15.7"
envconfig = "0.11.0"
gemini-rust = "1.5.1"
log = "0.4.28"
serde = { version = "1.0.228", features = ["derive"] }
serenity = { version = "0.12.4", features = ["cache"] }
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["rt-multi-thread", "macros"] }
tracing-subscriber = { version = "0.3.20", features = ["fmt", "env-filter"] }
